# Cpp-Utilities

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  Doxyfile.cfg  Doxyfile.in  LICENSE  README.md  _common_8h.html  _common_8h_source.html  _dimensional_analysis_8hpp.html  _dimensional_analysis_8hpp_source.html  _l_i_c_e_n_s_e.html  _r_w_spin_lock_8hpp.html  _r_w_spin_lock_8hpp_source.html  _ratios_8hpp.html  _ratios_8hpp_source.html  _safe_shared_ptr_8hpp.html  _safe_shared_ptr_8hpp_source.html  _sequencial_map_8hpp.html  _sequencial_map_8hpp_source.html  annotated.html  appveyor.yml  class_container_1_1_sequencial_map-members.html  class_container_1_1_sequencial_map.html  class_dimensional_1_1_quantity-members.html  class_dimensional_1_1_quantity.html  class_memory_1_1_enable_safe_shared_from_this-members.html  class_memory_1_1_enable_safe_shared_from_this.html  class_memory_1_1_r_w_spin_lock-members.html  class_memory_1_1_r_w_spin_lock.html  class_memory_1_1_r_w_spin_lock_1_1_read_holder-members.html  class_memory_1_1_r_w_spin_lock_1_1_read_holder.html  class_memory_1_1_r_w_spin_lock_1_1_upgraded_holder-members.html  class_memory_1_1_r_w_spin_lock_1_1_upgraded_holder.html  class_memory_1_1_r_w_spin_lock_1_1_write_holder-members.html  class_memory_1_1_r_w_spin_lock_1_1_write_holder.html  class_memory_1_1_safe_shared_ptr-members.html  class_memory_1_1_safe_shared_ptr.html  (+90 more)
.github/workflows/: ccpp.yml  coveralls.yml
Utilities/: Common.h  utilities_common.h  utilities_common.hpp
Utilities/Container/: SequencialMap.hpp
Utilities/Containers/: SequencialMap.hpp
Utilities/DimensionalAnalysis/: DimensionalAnalysis.hpp  Ratios.hpp
Utilities/MemorySafety/: RWSpinLock.hpp  SafeShardPtr.hpp  SafeSharedPtr.hpp
Utilities/dimensional_analysis/: dimensional_analysis.hpp  ratios.hpp
cmake/in/: deps.in
doc/: Doxyfile  dimensional__analysis_8hpp_source.html  menudata.js  namespacemembers.html  structdimensional_1_1quantity.html
doc/html/: annotated.html  dir_19283f8a4c77553aba7e70c34fdde57a.html  dir_b05a5fa85f84bfc9013183c9d87f9a36.html  functions_func.html  globals_defs.html  index.html  namespaces.html  structdimensional_1_1quantity.html  structdimensional_1_1unit.html  utilities__common_8h.html
doc/search/: all_3.js  classes_0.js  functions_0.js  functions_2.js  typedefs_3.js  (+2 more)
docs/: _common_8h.html  _common_8h_source.html  _dimensional_analysis_8hpp.html  _dimensional_analysis_8hpp_source.html  _l_i_c_e_n_s_e.html  _r_w_spin_lock_8hpp.html  _r_w_spin_lock_8hpp_source.html  _ratios_8hpp.html  _ratios_8hpp_source.html  _safe_shard_ptr_8hpp.html  _safe_shard_ptr_8hpp_source.html  _safe_shared_ptr_8hpp.html  _safe_shared_ptr_8hpp_source.html  _sequencial_map_8hpp.html  _sequencial_map_8hpp_source.html  annotated.html  class_container_1_1_sequencial_map-members.html  class_container_1_1_sequencial_map.html  class_dimensional_1_1_quantity-members.html  class_dimensional_1_1_quantity.html  class_memory_1_1_enable_safe_shared_from_this-members.html  class_memory_1_1_enable_safe_shared_from_this.html  class_memory_1_1_r_w_spin_lock-members.html  class_memory_1_1_r_w_spin_lock.html  class_memory_1_1_r_w_spin_lock_1_1_read_holder-members.html  class_memory_1_1_r_w_spin_lock_1_1_read_holder.html  class_memory_1_1_r_w_spin_lock_1_1_upgraded_holder-members.html  class_memory_1_1_r_w_spin_lock_1_1_upgraded_holder.html  class_memory_1_1_r_w_spin_lock_1_1_write_holder-members.html  class_memory_1_1_r_w_spin_lock_1_1_write_holder.html  class_memory_1_1_safe_shared_ptr-members.html  class_memory_1_1_safe_shared_ptr.html  class_memory_1_1_safe_shared_ptr_1_1_array_helper-members.html  class_memory_1_1_safe_shared_ptr_1_1_array_helper.html  class_memory_1_1_safe_shared_ptr_1_1_ptr_helper-members.html  class_memory_1_1_safe_shared_ptr_1_1_ptr_helper.html  class_memory_1_1_safe_shared_ptr_1_1_ref_helper-members.html  class_memory_1_1_safe_shared_ptr_1_1_ref_helper.html  class_memory_1_1_safe_shared_ptr_1_1_safe_shared_array_ptr_helper-members.html  class_memory_1_1_safe_shared_ptr_1_1_safe_shared_array_ptr_helper.html  (+100 more)
latex/: _common_8h.tex  _common_8h_source.tex  _dimensional_analysis_8hpp.tex  _dimensional_analysis_8hpp_source.tex  _l_i_c_e_n_s_e.tex  _r_w_spin_lock_8hpp.tex  _r_w_spin_lock_8hpp_source.tex  _ratios_8hpp.tex  _ratios_8hpp_source.tex  _safe_shared_ptr_8hpp.tex  _safe_shared_ptr_8hpp_source.tex  _sequencial_map_8hpp.tex  _sequencial_map_8hpp_source.tex  annotated.tex  class_container_1_1_sequencial_map.tex  class_dimensional_1_1_quantity.tex  class_memory_1_1_enable_safe_shared_from_this.eps  class_memory_1_1_enable_safe_shared_from_this.tex  class_memory_1_1_r_w_spin_lock.tex  class_memory_1_1_r_w_spin_lock_1_1_read_holder.tex  class_memory_1_1_r_w_spin_lock_1_1_upgraded_holder.tex  class_memory_1_1_r_w_spin_lock_1_1_write_holder.tex  class_memory_1_1_safe_shared_ptr.tex  class_memory_1_1_safe_shared_ptr_1_1_array_helper.tex  class_memory_1_1_safe_shared_ptr_1_1_ptr_helper.tex  class_memory_1_1_safe_shared_ptr_1_1_ref_helper.tex  class_memory_1_1_safe_weak_ptr.tex  dir_24fbc3f5a90cef621dd87b410d98cd6a.tex  dir_3da225d59accf22aded10bfe2ed9f396.tex  dir_3fafd72e271ff2fc30b57477446889b0.tex  dir_cc3f469176eff71c86d2985cf9e9c60c.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  group___containers.tex  group___dimensional_analysis.tex  group___memory_safety.tex  hierarchy.tex  index.tex  md__l_i_c_e_n_s_e.tex  modules.tex  (+10 more)
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  defines_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  functions_0.js  functions_1.js  (+49 more)
test/: CMakeLists.txt
test/Container/: SequencialMap.cpp
test/DimensionalAnalysis/: DimensionalAnalysis.cpp  Ratios.cpp
test/MemorySafety/: SafeSharedPtr.cpp
(+120 files in other folders)
